--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,6 +1,6 @@
 {
-  "numberOfCoins": 5,
-  "selectLike": 0,
+  "numberOfCoins": 1,
+  "selectLike": 1,
   "monthEndAutoCharge": true,
-  "devicePlatform": "ios"
+  "devicePlatform": "android"
 }
